--- a/.github/workflows/parse-test.yaml
+++ b/.github/workflows/parse-test.yaml
@@ -16,4 +16,4 @@ jobs:
       - uses: actions/setup-python@v2
         with:
           python-version: '3.10'
-      - run: python3 test.py
+      - run: python3 test/test.py
