--- a/.github/workflows/parse-test.yaml
+++ b/.github/workflows/parse-test.yaml
@@ -16,4 +16,9 @@ jobs:
       - uses: actions/setup-python@v2
         with:
           python-version: '3.10'
-      - run: python3 test/test.py
+      - uses: GuillaumeFalourd/clone-github-repo-action@v2
+        with:
+          owner: 'berkaycagir'
+          repository: 'michelson-test-scripts'
+          access-token: ${{ secrets.ACCESS_TOKEN }}
+      - run: python3 michelson-test-scripts/test.py
