--- a/.github/workflows/parse-test.yaml
+++ b/.github/workflows/parse-test.yaml
@@ -11,8 +11,10 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
-      - run: npm install --save nearley moo
-      - run: npm install -g nearley moo
+      - run: npm install --save moo
+      - run: npm install -g moo
+      - run: npm install --save nearley
+      - run: npm install -g nearley
       - uses: actions/setup-python@v4
         with:
           python-version: '3.10'
